--- a/project_main/signup.html
+++ b/project_main/signup.html
@@ -7,6 +7,13 @@
     <meta name="viewport" content="width=device-width">
     <title>RECO</title>
     <link href="./css/signup.css" rel=stylesheet>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/signup.js"></script>
+    <!-- <script>
+      $(function(){
+        openPop();
+      });
+    </script> -->
   </head>
   <body>
     
