--- a/project_main/main.html
+++ b/project_main/main.html
@@ -9,6 +9,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/signup.js"></script>
     <script>
+        $(function(){
+        login_js();
+      });
       $(function(){
         signup_js();
       });
