--- a/project_main/faq.html
+++ b/project_main/faq.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">PHOTO RECORD</a></p></div>
+      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">RECO</a></p></div>
       <session>
         <div class="login_item">
           <ul class="login">
