--- a/project_main/board_write.html
+++ b/project_main/board_write.html
@@ -1,4 +1,4 @@
-<!-- 자유게시판 페이지입니다. -->
+<!-- 자유게시판 작성하는 페이지입니다. -->
 
 <!DOCTYPE html>
 <html lang="ko">
@@ -91,7 +91,7 @@
                 <tr><td>글 폰트 등 변경란</td></tr>
                 
                   <tr><td></td></tr>
-                  <tr><td><textarea cols="175" rows="50" placeholder="500자까지 자유작성/선택입력사항/캘린더에 작성하는 내용은 본인만 볼수 있다."></textarea>
+                  <tr><td><textarea cols="175" rows="30" placeholder="500자까지 자유작성/선택입력사항/캘린더에 작성하는 내용은 본인만 볼수 있다."></textarea>
                   </td></tr>
               </table>
 
