--- a/project_main/faq.html
+++ b/project_main/faq.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <header>
-      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">PHOTO RECORD</a></p></div>
+      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">RECO</a></p></div>
       <session>
         <div class="login_item">
           <ul class="login">
             <li class="log_li" ><a href="#" class=log_link>로그인</a></li>
             <li class="log_li" herf="#"><a href="./main.html"  class=log_link>회원가입</a></li>
-            <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li>
+            <!-- <li class="log_li" herf="#"><a href="./main.html"  class=log_link> 마이페이지</a></li> -->
   
           </ul>
   
@@ -48,7 +48,7 @@
           </ul>
         </div>
         <div class="contents">
-        
+          <h1>FAQ</h1>
         <div class="accordion">
           <input type="radio" name="accordion" id="answer01">
             <label for="answer01">스윙 이용권 결제- 무통장입금 방법<em></em></label>
