--- a/project_main/calendar_write.html
+++ b/project_main/calendar_write.html
@@ -16,7 +16,7 @@
           <ul class="login">
             <li class="log_li" ><a href="#" class=log_link>로그인</a></li>
             <li class="log_li" herf="#"><a href="./main.html"  class=log_link>회원가입</a></li>
-            <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li>
+            <!-- <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li> -->
   
           </ul>
   
@@ -39,6 +39,7 @@
       <input type="text" id="file_route" disabled="disabled" value="파일 선택">
       <label for="upload_file" class="file_button">이미지 업로드</label><br>
       <img src="./image/book.jpg" id="img_section" >
+      <script src="./js/calendar_write.js"></script>
       
       
       <input type="file" id="upload_file" accept="image/*" required=true >
