--- a/project_main/board_content.html
+++ b/project_main/board_content.html
@@ -16,7 +16,7 @@
           <ul class="login">
             <li class="log_li" ><a href="#" class=log_link>로그인</a></li>
             <li class="log_li" herf="#"><a href="./main.html"  class=log_link>회원가입</a></li>
-            <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li>
+            <!-- <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li> -->
   
           </ul>
   
