--- a/project_main/board_write.html
+++ b/project_main/board_write.html
@@ -40,9 +40,9 @@
         <div class="aside">
           <h2>COMMUNITY</h2>
           <ul class="aisde_menu">
-            <li class="aside_in_menu" id="aside_notice"><a href="#">공지사항</a></li>
-            <li class="aside_in_menu" id="aside_faq"><a href="#">FAQ</a></li>
-            <li class="aside_in_menu" id="aside_community"><a href="#">자유게시판</a></li>
+            <li class="aside_in_menu" id="aside_notice"><a href="#" class="aside_button">공지사항</a></li>
+            <li class="aside_in_menu" id="aside_faq"><a href="#" class="aside_button">FAQ</a></li>
+            <li class="aside_in_menu" id="aside_community"><a href="#" class="aside_button">자유게시판</a></li>
 
           </ul>
         </div>
