--- a/project_main/canlendar.html
+++ b/project_main/canlendar.html
@@ -16,7 +16,7 @@
           <ul class="login">
             <li class="log_li" ><a href="#" class=log_link>로그인</a></li>
             <li class="log_li" herf="#"><a href="./main.html"  class=log_link>회원가입</a></li>
-            <!-- <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li> -->
+            <li class="log_li" herf="#"><a href="./main.html"  class=log_link1 id="log_link_community">커뮤니티</a></li>
   
           </ul>
   
@@ -31,7 +31,7 @@
           <li class="menu_item"><a href="#" class="menu_link yellow">WORK OUT</a></li>
           <li class="menu_item"><a href="#" class="menu_link yellow">CHILD</a></li>
           <li class="menu_item"><a href="#" class="menu_link yellow">BOOK</a></li>
-          <li class="menu_item"><a href="#" class="menu_link yellow">COMMUNITY</a></li>
+         
         </ul>
       </div>
       
