--- a/project_main/my_community.html
+++ b/project_main/my_community.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <header>
-      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">PHOTO RECORD</a></p></div>
+      <div class="headerbox"><p class="headertext"><a href="./main.html" class="link">RECO</a></p></div>
       <session>
         <div class="login_item">
           <ul class="login">
             <li class="log_li" ><a href="#" class=log_link>로그인</a></li>
             <li class="log_li" herf="#"><a href="./main.html"  class=log_link>회원가입</a></li>
-            <li class="log_li" herf="#"><a href="./main.html"  class=log_link>고객센터</a></li>
+            <li class="log_li" herf="#"><a href="./main.html"  class=log_link1 id="log_link_community">커뮤니티</a></li>
   
           </ul>
   
