--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -26,7 +26,7 @@
                 <h3>회원가입</h3>
                 <input type="text" name="name" id="name" required placeholder="이름">
                 <br>
-                <input type="text" name="id" id="id" required placeholder="닉네임">
+                <input type="text" name="nickname" id="nickname" required placeholder="닉네임">
                 <!--<button type="button" class="iddupchk">닉네임중복확인</button> -->
                 <!-- 디자인적으로 별로일 때 닉네임이 중복시 alert창 뜨게 하기  -->
                 <br>
