--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -28,7 +28,7 @@
         //가입클릭했을때 END
         
         //로그인 버튼 클릭시 START
-        	beforeLoginClick();
+        	//beforeLoginClick();
         //로그인 버튼 클릭시 END
         
       });
