--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,5 +1,5 @@
 <!-- 로그인페이지입니다. -->
-
+	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     
     <title>login</title>
@@ -19,7 +19,7 @@
 	</script>
   	
     	<div class="login">  
-            <form method="post" action="./login" autocomplete="off">
+            <form method="post" action="./login" target="login"autocomplete="off">
                          
                 <div class="login_form">
 	                <h1>RECO</h1>
