--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -9,10 +9,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/signup.js"></script>
     <script>
+   
       $(function(){
     	 let $emailObj = $('div.signup>form>input[name=email]');
     	 let $nicknameObj = $('div.signup>form>input[name=nickname]');
-    	 let $submitBtObj = $('div.signup>form>button[type=summit]');
+    	 let $submitBtObj = $('div.signup>form>button[type=submit]');
     	 let $formObj = $('div.signup>form');
     	
     	//닉네임 중복확인 할떄 START
