update faq login

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -6,6 +6,7 @@
    
     <link href="./css/login.css" rel=stylesheet>
     <script src="./js/login.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
     $(function(){
         /*--로그인버튼이 클릭되었을때 START--*/
@@ -19,7 +20,7 @@
 	</script>
   	
     	<div class="login">  
-            <form method="post" action="./login" target="login"autocomplete="off">
+            <form method="post" action="./login" target="/login" autocomplete="off">
                          
                 <div class="login_form">
 	                <h1>RECO</h1>
