--- a/src/main/webapp/signup.html
+++ b/src/main/webapp/signup.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>RECO</title>
     <link href="./css/signup.css" rel=stylesheet>
