--- a/src/main/webapp/faqlist.html
+++ b/src/main/webapp/faqlist.html
@@ -12,7 +12,7 @@
       
         
         <div class="contents">
-          <h1>FAQ</h1>
+          <h1 class="faq">FAQ</h1>
         <div class="accordion">
           <input type="radio" name="accordion" id="answer01">
             <label for="answer01">RECO 이용권 결제- 무통장입금 방법<em></em></label>
