communtiny click popup

--- a/src/main/webapp/before.html
+++ b/src/main/webapp/before.html
@@ -39,7 +39,7 @@
                 <img id= "before_main" src="./images/before_main.png" alt="main_page" title="main_page"  >
             </div>
             <div > 
-               <h2 class="before_main_explain"> 최대 5개의 포토캘린더</h2> 
+               <h2 class="before_main_explain"> 최대 5개의 포토캘린더를 만들 수 있습니다.</h2> 
             </div>
         </fieldset>
         <fieldset>
