--- a/src/main/webapp/caltt.html
+++ b/src/main/webapp/caltt.html
@@ -24,7 +24,7 @@
     </script>
             
     <fieldset>
-        <form  method="post" action="./caladd" autocomplete="off">
+        <form  method="post" action="./callist" autocomplete="off">
             <button id="input_img">
             	<strong>대표사진 추가(컴퓨터에서 불러오기)</strong><br>
             		<input type="file" name="thumbnail" id="upload_file" accept="image/*" >
