--- a/src/main/webapp/faqlist.html
+++ b/src/main/webapp/faqlist.html
@@ -6,6 +6,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="./css/faqlist.css">
+  </head>
+
+
+<body>
     <section>
 
       <div class="container">
