--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -43,6 +43,6 @@
                 </div>
               
          
-               <a href="#"><img src="./images/kakao_login_medium_narrow.png"></a>
+               <!-- <a href="#"><img src="./images/kakao_login_medium_narrow.png"></a>-->
           </div>     
 
